# organizer_v2

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
organizer_v2/: asgi.py  settings.py  urls.py  wsgi.py
website/: forms.py  models.py  urls.py  views.py
website/templates/: form.html  messages.html  table.html
website/templates/website/: index.html
